fix: code tabs scrolling and nested list spacing

--- a/packages/nimiq-css/src/css/typography.css
+++ b/packages/nimiq-css/src/css/typography.css
@@ -431,7 +431,7 @@
     ul ul {
       margin-top: 8px;
       margin-bottom: 16px;
-      padding-left: 20px;
+      padding-left: 8px;
 
       li {
         margin-top: 0;
